--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@commercelayer/js-auth": "^4.2.1",
     "@commercelayer/react-components": "4.9.0",
     "@headlessui/react": "^1.5.0",
+    "@next-auth/firebase-adapter": "^0.0.2-canary.207",
     "@next/env": "^14.1.0",
     "@portabletext/react": "^3.0.4",
     "@sanity/client": "^6.12.4",
@@ -75,11 +76,13 @@
     "autoprefixer": "10.4.5",
     "axios": "^1.6.7",
     "easyqrcodejs-nodejs": "^4.5.2",
+    "firebase": "^10.11.1",
     "firebase-admin": "^12.1.0",
     "iframe-resizer-react": "^1.1.0",
-    "js-cookie": "^3.0.1",
+    "js-cookie": "^3.0.5",
     "jsqr": "^1.4.0",
     "next": "^14.1.0",
+    "next-auth": "^4.24.7",
     "next-sanity": "^8.0.0",
     "postcss": "^8.4.35",
     "prop-types": "^15.8.1",
@@ -90,6 +93,7 @@
     "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.0.1",
     "sanity": "^3.28.0",
     "semver": "^7.6.0",
