--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
     "@typescript-eslint/typescript-estree": "^7.0.1",
     "autoprefixer": "10.4.5",
     "axios": "^1.6.7",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "easyqrcodejs-nodejs": "^4.5.2",
     "firebase": "^10.11.1",
     "firebase-admin": "^12.1.0",
